press overflow fix, sigup panel IE fix

--- a/source/stylesheets/sumofus/components/press-tile.scss
+++ b/source/stylesheets/sumofus/components/press-tile.scss
@@ -28,8 +28,6 @@
       height: 198px;
     }
     .press-release-content {
-      display: flex;
-      flex-direction: column;
       padding-left: 15px;
       .press-tile__title {
         font-weight: 500;
